[gd_scene load_steps=40 format=2]

[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Idle/HeroKnight_Idle_0.png" type="Texture" id=1]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Jump/HeroKnight_Jump_2.png" type="Texture" id=2]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Jump/HeroKnight_Jump_1.png" type="Texture" id=3]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_4.png" type="Texture" id=4]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Attack1/HeroKnight_Attack1_0.png" type="Texture" id=5]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_6.png" type="Texture" id=6]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_7.png" type="Texture" id=7]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_8.png" type="Texture" id=8]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_5.png" type="Texture" id=9]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_0.png" type="Texture" id=10]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Attack1/HeroKnight_Attack1_1.png" type="Texture" id=11]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_9.png" type="Texture" id=12]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Attack1/HeroKnight_Attack1_4.png" type="Texture" id=13]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_1.png" type="Texture" id=14]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Attack1/HeroKnight_Attack1_3.png" type="Texture" id=15]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_2.png" type="Texture" id=16]
[ext_resource path="res://Minijocs/Lluita_de_sables/Imatges_lluita_de_sables/P1 P2/P2.png" type="Texture" id=17]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Attack1/HeroKnight_Attack1_5.png" type="Texture" id=18]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_3.png" type="Texture" id=19]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Jump/HeroKnight_Jump_0.png" type="Texture" id=20]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Attack1/HeroKnight_Attack1_2.png" type="Texture" id=21]
[ext_resource path="res://Minijocs/Lluita_de_sables/P2.gd" type="Script" id=22]
[ext_resource path="res://Minijocs/Lluita_de_sables/EspasaP2.gd" type="Script" id=23]
[ext_resource path="res://Minijocs/Lluita_de_sables/Barravida/Cor.png" type="Texture" id=24]
[ext_resource path="res://Minijocs/Lluita_de_sables/Barravida/BarraPlena.png" type="Texture" id=25]
[ext_resource path="res://Minijocs/Lluita_de_sables/Barravida/BarraVuida.png" type="Texture" id=26]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Death/HeroKnight_Death_0.png" type="Texture" id=27]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Death/HeroKnight_Death_7.png" type="Texture" id=28]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Death/HeroKnight_Death_9.png" type="Texture" id=29]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Death/HeroKnight_Death_1.png" type="Texture" id=30]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Death/HeroKnight_Death_5.png" type="Texture" id=31]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Death/HeroKnight_Death_8.png" type="Texture" id=32]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Death/HeroKnight_Death_2.png" type="Texture" id=33]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Death/HeroKnight_Death_4.png" type="Texture" id=34]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Death/HeroKnight_Death_3.png" type="Texture" id=35]
[ext_resource path="res://Minijocs/Lluita_de_sables/Hero Knight/Sprites/HeroKnight/Death/HeroKnight_Death_6.png" type="Texture" id=36]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 11, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 11 ), ExtResource( 21 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 18 ) ],
"loop": false,
"name": "ataca",
"speed": 10.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "salta",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 27 ), ExtResource( 30 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 34 ), ExtResource( 31 ), ExtResource( 36 ), ExtResource( 28 ), ExtResource( 32 ) ],
"loop": true,
"name": "mor",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "quiet",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 4 ), ExtResource( 19 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 12 ) ],
"loop": true,
"name": "corre",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9, 17 )

[node name="KinematicBody2D2" type="KinematicBody2D"]
script = ExtResource( 22 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -1, -45 )
scale = Vector2( 0.0829167, 0.112083 )
texture = ExtResource( 17 )

[node name="EspasaP2" type="Area2D" parent="."]
script = ExtResource( 23 )

[node name="CollisionEspasa" type="CollisionShape2D" parent="EspasaP2"]
position = Vector2( 35, 0 )
shape = SubResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "mor"
frame = 8
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 8 )
shape = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BarraVida2" type="TextureProgress" parent="CanvasLayer"]
pause_mode = 1
margin_left = 726.0
margin_right = 1142.0
margin_bottom = 416.0
value = 100.0
texture_under = ExtResource( 24 )
texture_over = ExtResource( 26 )
texture_progress = ExtResource( 25 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
